<resources>
    <string name="app_name">InsuGO</string>
    <string name="ingreso">Ingreso a InsuGo</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="saludo">¡Bienvenido a InsuGo!</string>
    <string name="text_ver_alacena">Ver Alacena Regional</string>
    <string name="info">Acerca de la App</string>
    <string name="info_detalle">Desarrollado por Skarkloff y Zappellini para el Taller de Nuevas Tecnologías 2026. Es una plataforma digital para pacientes con prediabetes y diabetes tipo 2 del Valle Inferior del Río Chubut.</string>
</resources>